# src/Models/Topic.php
@@ -1,55 +1,0 @@
-<?php
-declare(strict_types=1);
-
-namespace App\Models;
-
-class Topic
-{
-    public int $id;
-    public int $module_id;
-    public string $title;
-    public ?string $description;
-    public ?string $module_title;
-    /** @var array<string,mixed>|null */
-    public ?array $module_type;
-
-    public function __construct(
-        int $id,
-        int $moduleId,
-        string $title,
-        ?string $description,
-        ?string $moduleTitle = null,
-        ?array $moduleType = null
-    ) {
-        $this->id           = $id;
-        $this->module_id    = $moduleId;
-        $this->title        = $title;
-        $this->description  = $description;
-        $this->module_title = $moduleTitle;
-        $this->module_type  = $moduleType;
-    }
-
-    public static function fromArray(array $row): self
-    {
-        return new self(
-            (int)($row['id'] ?? 0),
-            (int)($row['module_id'] ?? 0),
-            (string)($row['title'] ?? ''),
-            isset($row['description']) ? (string)$row['description'] : null,
-            isset($row['module_title']) ? (string)$row['module_title'] : null,
-            ModuleType::embeddedFromPrefixedRow($row)
-        );
-    }
-
-    public function toArray(): array
-    {
-        return [
-            'id'           => $this->id,
-            'module_id'    => $this->module_id,
-            'title'        => $this->title,
-            'description'  => $this->description,
-            'module_title' => $this->module_title,
-            'module_type'  => $this->module_type,
-        ];
-    }
-}
